--- a/css/shared/_variables.scss
+++ b/css/shared/_variables.scss
@@ -27,6 +27,7 @@ $font-small: 14px;
 //Header
 $nav-font-weight: 700;
 $top-bar-height: 32px;
+$top-nav-height: 42px;
 $mobile-bar-height: 60px;
 $top-panel-height: 100px;
 
