--- a/css/header.scss
+++ b/css/header.scss
@@ -77,6 +77,12 @@
         .dropdown{
             display: inline-block;
             .dropdown-menu{
+                visibility: hidden;
+                opacity: 0;
+                transition: opacity 0.5s;
+                transition-delay: 0.5s;
+                display: block;
+
                 position: absolute;
                 will-change: transform;
                 top: 0px;
@@ -133,7 +139,10 @@
 
         }
         .dropdown:hover .dropdown-menu{
-            display: block;
+            visibility: visible;
+            opacity: 1;
+            transition: opacity 0.5s;
+            transition-delay: 0.5s;
         }
         .big-category-dropdown{
             .navigation-link{
@@ -159,6 +168,19 @@
             .big-menu-container-label{
                 width: 100%;
             }
+            .big-menu{
+                background-color: $secondary;
+                color: white;
+                border: none;
+                label{
+                    color: white;
+                    @extend .transition-all;
+                    &:hover{
+                        background-color: white;
+                        color: $secondary;
+                    }
+                }
+            }
             .big-category-menu{
                 display: none;
                 position: absolute;
@@ -166,7 +188,8 @@
                 left: 298px;
                 padding: 0.5rem 0;
                 font-size: 1rem;
-                color: #212529;
+                color: $secondary;
+                background-color: white;
                 text-align: left;
                 list-style: none;
                 background-color: #fff;
@@ -285,6 +308,7 @@
         }
     }
     .cart-btn,.wishlist-btn,.search-btn{
+        margin-top: 5px;
         font-size: 16px;
         .wishlist-circle{
             right: 75px;
@@ -294,7 +318,7 @@
         }
         .product-circle-number{
             position: absolute;
-            top: 1px;
+            top: 5px;
             width: 15px;
             height: 15px;
             background-color: white;
@@ -330,6 +354,7 @@
             }
         }
         .wishlist-btn,.cart-btn{
+            margin-top: 0px;
             .wishlist-circle-responsive{
                 top: -5px;
                 left: 50px;
