--- a/css/header.css
+++ b/css/header.css
@@ -95,8 +95,6 @@
 .header-container-desktop .header-nav .dropdown .dropdown-menu {
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: opacity 0.3s;
-  transition: opacity 0.3s;
   -webkit-transition-delay: 0.5s;
           transition-delay: 0.5s;
   display: block;
@@ -113,13 +111,20 @@
 }
 
 .header-container-desktop .header-nav .dropdown .dropdown-menu .dropdown-item {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
   white-space: normal;
   color: transparent;
 }
 
 .header-container-desktop .header-nav .dropdown .dropdown-menu .dropdown-item:hover {
+  background-color: #f0f0f0;
+}
+
+.header-container-desktop .header-nav .dropdown .dropdown-menu .cart-dropdown-menu * {
+  white-space: normal;
+  color: transparent;
+}
+
+.header-container-desktop .header-nav .dropdown .dropdown-menu .cart-dropdown-menu *:hover {
   background-color: #f0f0f0;
 }
 
@@ -172,15 +177,9 @@
 .header-container-desktop .header-nav .dropdown:hover .dropdown-menu {
   visibility: visible;
   opacity: 1;
-  -webkit-transition: opacity 0.3s;
-  transition: opacity 0.3s;
-  -webkit-transition-delay: 0.5s;
-          transition-delay: 0.5s;
 }
 
 .header-container-desktop .header-nav .dropdown:hover .dropdown-menu .dropdown-item {
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
   color: #3d464d;
 }
 
