--- a/css/header.css
+++ b/css/header.css
@@ -112,19 +112,9 @@
 
 .header-container-desktop .header-nav .dropdown .dropdown-menu .dropdown-item {
   white-space: normal;
-  color: transparent;
 }
 
 .header-container-desktop .header-nav .dropdown .dropdown-menu .dropdown-item:hover {
-  background-color: #f0f0f0;
-}
-
-.header-container-desktop .header-nav .dropdown .dropdown-menu .cart-dropdown-menu * {
-  white-space: normal;
-  color: transparent;
-}
-
-.header-container-desktop .header-nav .dropdown .dropdown-menu .cart-dropdown-menu *:hover {
   background-color: #f0f0f0;
 }
 
@@ -175,6 +165,8 @@
 }
 
 .header-container-desktop .header-nav .dropdown:hover .dropdown-menu {
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
   visibility: visible;
   opacity: 1;
 }
