--- a/css/header.css
+++ b/css/header.css
@@ -217,7 +217,6 @@
 }
 
 .header-container-desktop .header-nav .big-category-dropdown .big-menu label:hover {
-  background-color: white;
   color: #3d464d !important;
 }
 
@@ -235,9 +234,9 @@
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  background-size: auto 250px;
+  background-size: 250px auto;
   background-repeat: no-repeat;
-  background-position: right 50px bottom;
+  background-position: right 50px bottom 25px;
 }
 
 .header-container-desktop .header-nav .big-category-dropdown .big-category-menu:hover {
