--- a/css/shared/_variables.scss
+++ b/css/shared/_variables.scss
@@ -14,6 +14,9 @@ $color-dark-smoke: rgb(115, 115, 115);
 $color-btn-hover: rgb(221, 201, 128);
 $color-link-hover: rgb(26, 102, 255);
 
+$color-card-border: rgba(0, 0, 0, 0.125);
+
+
 $color-danger: red;
 $color-warning: orange;
 $color-success: lightgreen ;
