--- a/css/shared/_variables.scss
+++ b/css/shared/_variables.scss
@@ -38,7 +38,8 @@ $top-panel-height: 100px;
 $product-title-size: 15px;
 $product-card-height: 350px;
 
-
+//Filtres
+$color-filter-size: 25px;
 
 
 //text
