--- a/css/productLayout.css
+++ b/css/productLayout.css
@@ -282,34 +282,123 @@
 .product-layout-aside .card-body .layout-aside-component {
   border-top: 2px solid #f0f0f0;
   font-size: 14px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+
+.product-layout-aside .card-body .layout-aside-component .component-header {
+  font-weight: 600;
+  margin-left: 20px;
+  margin-top: 10px;
 }
 
 .product-layout-aside .card-body .layout-aside-component .component-wrapper {
   padding: 10px 20px 5px 20px;
+  max-height: 100px;
+  overflow: hidden;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
-.product-layout-aside .card-body .layout-aside-component .component-wrapper .component-header {
-  font-weight: 600;
+.product-layout-aside .simple-dropdown-controll {
+  height: 20px;
+  width: 100%;
 }
 
-.checkbox-list-filtre {
+.product-layout-aside .simple-dropdown {
+  display: none;
+}
+
+.product-layout-aside .simple-dropdown:checked ~ .component-wrapper {
+  max-height: 0px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.checkbox-list-filter {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.checkbox-list-filtre .chek-name-label {
-  margin-left: 20px;
-  margin-bottom: 0;
-}
-
-.checkbox-list-filtre .check-count-label {
+.checkbox-list-filter .check-count-label {
   float: right;
   font-size: 14px;
   margin: 0;
 }
 
-.checkbox-list-filtre .disabled {
+.checkbox-list-filter .disabled {
   color: #737373;
+}
+
+.color-filter-container {
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+}
+
+.color-filter-container .custom-check .custom-check-container .custom-check {
+  height: 25px;
+  width: 25px;
+}
+
+.color-filter-container .custom-check .custom-check-container .custom-check:after {
+  left: 8px;
+  top: 5px;
+  width: 8px;
+  height: 12px;
+}
+
+.color-filter-container .disabled {
+  color: #737373;
+}
+
+.color-filter-container .color-red .custom-check-container:hover input ~ .custom-check {
+  background-color: darkred;
+}
+
+.color-filter-container .color-red .custom-check-container input:checked ~ .custom-check {
+  background-color: darkred;
+}
+
+.color-filter-container .color-red .custom-check {
+  background-color: darkred;
+}
+
+.color-filter-container .color-red .custom-check:after {
+  border-color: white;
+}
+
+.color-filter-container .color-blue .custom-check-container:hover input ~ .custom-check {
+  background-color: blue;
+}
+
+.color-filter-container .color-blue .custom-check-container input:checked ~ .custom-check {
+  background-color: blue;
+}
+
+.color-filter-container .color-blue .custom-check {
+  background-color: blue;
+}
+
+.color-filter-container .color-blue .custom-check:after {
+  border-color: white;
+}
+
+.color-filter-container .color-yellow .custom-check-container:hover input ~ .custom-check {
+  background-color: #ffd333;
+}
+
+.color-filter-container .color-yellow .custom-check-container input:checked ~ .custom-check {
+  background-color: #ffd333;
+}
+
+.color-filter-container .color-yellow .custom-check {
+  background-color: #ffd333;
+}
+
+.color-filter-container .color-yellow .custom-check:after {
+  border-color: black;
 }
 /*# sourceMappingURL=productLayout.css.map */
