--- a/css/shared/_typography.scss
+++ b/css/shared/_typography.scss
@@ -67,6 +67,7 @@ h3{
             height: 15px;
             width: 15px;
             background-color: #eee;
+            border-radius: 4px;
             &:after{
                 content: "";
                 position: absolute;
@@ -103,5 +104,15 @@ h3{
         display: block;
     }
 }
-
+.chek-name-label{
+    margin-left: 20px;
+    margin-bottom: 0;
+}
+label{
+    cursor: pointer;
+    -webkit-user-select: none; /* Chrome/Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+}
 //Custom checkbox
+
